fix project spacing

--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ a:visited {
   min-height: 35vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-start;
   padding: 2vh;
   margin: 2vw;
@@ -282,7 +282,9 @@ a:visited {
 }
 .project-head {
   font-family: "Zilla Slab", sans-serif;
-  color: var(--accent-color);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .project-title {
   font-size: 2rem;
@@ -305,6 +307,7 @@ a:visited {
 }
 .project-about {
   font-family: Montserrat, sans-serif;
+  margin-top: 2rem;
 }
 .project-about > .link {
   font-size: 1rem;
